--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.5.7",
-    "rxjs": "~6.3.3",
+    "rxjs": "6.2.2",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
